# bsi-aed

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  hello1.c  lista1.c
src/: hello2.c  lista_ligada_circular_no_cabeca.c  lista_ligada_dinamica.c  lista_ligada_estatica.c  lista_linear.c  no1.c  no2.c  no3.c  no4.c  no5.c
